# bazel-action

./: .gitignore  README.md
bazel-grpc/: README.md  run.sh
bazel-grpc/clion/: Unnamed.xml  greeter_async_client.xml  greeter_async_server.xml
bazel-grpc/example/: BUILD  echo_async.cc  echo_client.cc  echo_server.cc
bazel-grpc/helloworld/: BUILD  greeter_async_client.cc  greeter_async_server.cc
bazel_grpc_demo/: LICENSE  README.md  WORKSPACE
bazel_grpc_demo/cpp_client/: BUILD  client.cpp  client.h  main.cpp
bazel_grpc_demo/protos/: BUILD  service.proto
bazel_grpc_demo/py_client/: BUILD  index.html  py_client.py
bazel_grpc_demo/service/: BUILD  main.cpp  service.cpp  service.h
demogdb/: CMakeLists.txt
stage3/: README.md  bazel-stage3  hello-world
stage3/main/: hello-world.cc
